--- a/PYTHON/2021 COMBINAÇÃO.ipynb
+++ b/PYTHON/2021 COMBINAÇÃO.ipynb
@@ -13,12 +13,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# IMPORTAR MÓDULOS\n",
+    "\n",
     "from itertools import permutations, combinations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.9.7\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Versões dos módulos\n",
+    "\n",
+    "!python --version\n",
+    "%reload_ext watermark\n",
+    "%watermark --iversions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,6 +59,8 @@
     }
    ],
    "source": [
+    "# CRIAR UM ARRANJO COM TODAS AS COMBINAÇÕES POSSÍVEIS\n",
+    "\n",
     "perm = permutations(['A', 'B', 'C'])\n",
     "\n",
     "for vl in perm:\n",
@@ -43,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,6 +86,8 @@
     }
    ],
    "source": [
+    "# CRIAR UM ARRANJO COM DOIS ELEMENTOS\n",
+    "\n",
     "perm = permutations(['A', 'B', 'C'], 2)\n",
     "\n",
     "for vl in perm:\n",
@@ -68,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,6 +108,8 @@
     }
    ],
    "source": [
+    "# CRIAR UM COMBINAÇÃO COM TRÊS ELEMENTOS\n",
+    "\n",
     "comb = combinations(['A', 'B', 'C'], 3)\n",
     "\n",
     "for vl in comb:\n",
@@ -88,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +132,8 @@
     }
    ],
    "source": [
+    "# CRIAR UMA  COMBINAÇÃO COM DOIS ELEMENTOS\n",
+    "\n",
     "comb = combinations(['A', 'B', 'C'], 2)\n",
     "\n",
     "for vl in comb:\n",
@@ -111,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
