--- a/R/ESTATÍSTICA.Rmd
+++ b/R/ESTATÍSTICA.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "ESTATÍSTICA"
-author: "TIAGO TOUSO"
-date: "24/04/2021"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r}
