--- a/PYTHON/2022 JSON.md
+++ b/PYTHON/2022 JSON.md
@@ -19,11 +19,19 @@ dados = fake.json()
 dados
 ```
 
+```
+'[{"name": "Rachel Howell", "residency": "72133 Gross Valley\\nWest Scottside, HI 75999"}, {"name": "Jacqueline Bryan", "residency": "80281 Yoder Shoal Apt. 960\\nPort Edward, AL 44083"}, {"name": "Terry Miller", "residency": "117 Vasquez Stravenue Suite 578\\nBrookeland, NY 96401"}, {"name": "Bryan Pierce", "residency": "506 Herrera Estates\\nEast Charlene, NJ 72290"}, {"name": "Vincent Flores", "residency": "79658 David Oval Suite 065\\nWest Sabrinafurt, GA 23883"}, {"name": "Roy Colon", "residency": "4504 Tabitha Rapids\\nBrownland, DC 45809"}, {"name": "Charles Gilbert", "residency": "83251 Donald Path Apt. 059\\nWest Alyssa, ME 07692"}, {"name": "Paul Ross", "residency": "2055 Rebecca Creek\\nBrittneybury, NC 03889"}, {"name": "Colin Smith", "residency": "9588 Garcia Court\\nMillerchester, MO 32438"}, {"name": "Jason Cooper", "residency": "644 Oscar Grove Suite 406\\nPort Juliechester, NM 16941"}]'
+```
+
 
 ```python
 # EXIBIR TIPO DOS DADOS
 
 type(dados)
+```
+
+```
+str
 ```
 
 
@@ -40,6 +48,10 @@ contato = json.loads(dados)
 type(contato)
 ```
 
+```
+list
+```
+
 
 ```python
 # EXIBIR A VARIÁVEL
@@ -47,11 +59,39 @@ type(contato)
 contato
 ```
 
+```
+[{'name': 'Rachel Howell',
+  'residency': '72133 Gross Valley\nWest Scottside, HI 75999'},
+ {'name': 'Jacqueline Bryan',
+  'residency': '80281 Yoder Shoal Apt. 960\nPort Edward, AL 44083'},
+ {'name': 'Terry Miller',
+  'residency': '117 Vasquez Stravenue Suite 578\nBrookeland, NY 96401'},
+ {'name': 'Bryan Pierce',
+  'residency': '506 Herrera Estates\nEast Charlene, NJ 72290'},
+ {'name': 'Vincent Flores',
+  'residency': '79658 David Oval Suite 065\nWest Sabrinafurt, GA 23883'},
+ {'name': 'Roy Colon',
+  'residency': '4504 Tabitha Rapids\nBrownland, DC 45809'},
+ {'name': 'Charles Gilbert',
+  'residency': '83251 Donald Path Apt. 059\nWest Alyssa, ME 07692'},
+ {'name': 'Paul Ross',
+  'residency': '2055 Rebecca Creek\nBrittneybury, NC 03889'},
+ {'name': 'Colin Smith',
+  'residency': '9588 Garcia Court\nMillerchester, MO 32438'},
+ {'name': 'Jason Cooper',
+  'residency': '644 Oscar Grove Suite 406\nPort Juliechester, NM 16941'}]
+```
+
 
 ```python
 # ACESSANDO A VARIÁVEL
 
 contato[0]
+```
+
+```
+{'name': 'Rachel Howell',
+ 'residency': '72133 Gross Valley\nWest Scottside, HI 75999'}
 ```
 
 
@@ -84,10 +124,38 @@ with open('json.json', 'r') as arquivo:
 contato[-1]
 ```
 
+```
+{'name': 'Josi Peterson', 'residency': 'May city'}
+```
+
 
 ```python
 # EXIBIR TODOS OS ARQUIVOS
 
 contato
+```
+
+```
+[{'name': 'Rachel Howell',
+  'residency': '72133 Gross Valley\nWest Scottside, HI 75999'},
+ {'name': 'Jacqueline Bryan',
+  'residency': '80281 Yoder Shoal Apt. 960\nPort Edward, AL 44083'},
+ {'name': 'Terry Miller',
+  'residency': '117 Vasquez Stravenue Suite 578\nBrookeland, NY 96401'},
+ {'name': 'Bryan Pierce',
+  'residency': '506 Herrera Estates\nEast Charlene, NJ 72290'},
+ {'name': 'Vincent Flores',
+  'residency': '79658 David Oval Suite 065\nWest Sabrinafurt, GA 23883'},
+ {'name': 'Roy Colon',
+  'residency': '4504 Tabitha Rapids\nBrownland, DC 45809'},
+ {'name': 'Charles Gilbert',
+  'residency': '83251 Donald Path Apt. 059\nWest Alyssa, ME 07692'},
+ {'name': 'Paul Ross',
+  'residency': '2055 Rebecca Creek\nBrittneybury, NC 03889'},
+ {'name': 'Colin Smith',
+  'residency': '9588 Garcia Court\nMillerchester, MO 32438'},
+ {'name': 'Jason Cooper',
+  'residency': '644 Oscar Grove Suite 406\nPort Juliechester, NM 16941'},
+ {'name': 'Josi Peterson', 'residency': 'May city'}]
 ```
 
